# agent-team-backend

./: .env.example  .gitignore  .vercelignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
agents/: README.md
alembic/: env.py
app/: config.py  main.py
scripts/: clear_proposal_composer_sessions.py  delete_proposal_composer_chats.py  e2b_build_slidev_template.py  generate_proposal_word.py  load_yl_mock_ylp001.sh  set_user_password.py  smoke_mcp_agent.py  smoke_models.py  start.sh  stop.sh  sync_agent_profiles.py  sync_vercel_env.py  vercel-env.expected-user  vercel-env.sensitive-keys.txt
tests/: proposal_fee_fixtures.py  proposal_patch_helpers.py  test_add_package_merge.py  test_agent_factory_mcp.py  test_agent_factory_viz_tools.py  test_allowed_tools.py  test_anthropic_client.py  test_attachment_validation.py  test_attachments.py  test_auth_passwords.py  test_blob_storage.py  test_bvi_fee_render.py  test_diagram_artifact_emit.py  test_diagram_storage.py  test_fee_row_resolve.py  test_fee_table.py  test_first_invoice.py  test_footnotes.py  test_hook_catalog.py  test_hook_config.py  test_html_ppt.py  test_html_ppt_normalize.py  test_inline_attachment_storage.py  test_long_term_memory.py  test_maf_mapping_cancel.py  test_maf_mapping_reasoning.py  test_maf_mapping_tool_arguments.py  test_mcp_registry_runtime.py  test_mdm_catalog.py  test_mdm_catalog_tools.py  test_memory_compaction.py  test_memory_config.py  test_memory_projection.py  test_memory_projection_skill.py  test_model_registry_errors.py  test_placeholders.py  (+38 more)
(+387 files in other folders)
