[project]
name = "agent-platform-backend"
version = "0.1.0"
description = "Agent Platform backend on Microsoft Agent Framework"
requires-python = ">=3.11"
dependencies = [
    "agent-framework",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "redis>=5.2.0",
    "httpx>=0.28.0",
    "cryptography>=44.0.0",
    "bcrypt>=4.2.0",
    "email-validator>=2.2.0",
    "jsonschema>=4.23.0",
    "jsonpatch>=1.33",
    "docxtpl>=0.19.0",
    "docxcompose>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
